<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFE4B5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20px"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Tentang Program"/>
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20px"
            android:text="Beta Version"
            android:textStyle="italic"/>"
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20px"
            
            android:text="@string/about"/>
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginBottom="20px"
            android:text="@string/aboutslr"/>
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginBottom="20px"
            android:text="@string/aboutapp"/>

        <Button
            android:id="@+id/back_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kembali" />
        
        
    </LinearLayout>

</ScrollView>